--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,7 +442,44 @@ select:focus {
   align-items: center;
   justify-content: center;
 }
-.preloader.hide {
+
+
+div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  height: 200px;
+  width: 200px;
+  padding: 20px;
+}
+
+svg {
+  max-width: 70%;
+  max-height: 70%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+
+  path {
+      fill-opacity: 0;
+      stroke: #7280ff;
+      stroke-width: 2;
+      stroke-dasharray: 870;
+      stroke-dashoffset: 870;
+      animation: draw 3s infinite linear;
+  }
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+/*.preloader.hide {
   opacity: 0;
   display: none;
 }
@@ -479,7 +516,7 @@ select:focus {
   border-right: 0;
   border-top-color: transparent;
   animation: loader-1-inner 1s cubic-bezier(0.42, 0.61, 0.58, 0.41) infinite;
-}
+}*/
 @keyframes loader-1-outter {
   0% {
     transform: rotate(0deg);
